--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=cd, initial-scale=1.0">
+  <title>Budget Planner</title>
 </head>
 <body>
-  <h1>This is just a test  </h1>
+  
 </body>
 </html>
