--- a/index.html
+++ b/index.html
@@ -5,8 +5,61 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=cd, initial-scale=1.0">
   <title>Budget Planner</title>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+  <script nomodule src="https://unpkg.com/@ionic/core@4/dist/ionic.js"></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 </head>
 <body>
-  
+  <ion-app>
+    <ion-header>
+      <ion-toolbar color='medium'>
+        <ion-title>Budget Planner</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col size-md="6" offset-md="3">
+            <ion-card>
+              <ion-card-header>
+                <ion-card-title>New Expense</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-item color="light">
+                  <ion-label position="floating">Expense Reason</ion-label>
+                  <ion-input type="text" id="input-reason" clear-input="true" required="true"></ion-input>
+                </ion-item>
+                <ion-item color="light">
+                  <ion-label position="floating">Expense Amount</ion-label>
+                  <ion-input inputmode="numeric" id="input-amount" clear-input="true" required="true"></ion-input>
+                </ion-item>
+                <div class="ion-margin-vertical ion-text-center">
+                  <ion-button id="btn-cancel" fill="outline" color="danger">
+                    <ion-icon slot="start" name="close-circle-outline"></ion-icon>Clear
+                  </ion-button>
+                  <ion-button id="btn-confirm" color="success">
+                    <ion-icon slot="start" name="checkmark-circle-outline"></ion-icon>Add Expense
+                  </ion-button>
+                </div>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size-md="6" offset-md="3">
+            <ion-list id="expenses-list">
+            </ion-list>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size-md="6" offset-md="3">
+            <p class="ion-padding">Total Expenses: $<span id="total"></span></p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
+  </ion-app>
+  <script src="app.js"></script>
 </body>
 </html>
